<resources>
    <string name="app_name">CovidStatus</string>

    <string name="confirmed_cases">Confirmed Cases</string>
    <string name="recovered_cases">Recovered Cases</string>
    <string name="deaths_cases">Deaths Cases</string>

    <string name="title_prevention">Prevention</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>

    <string name="clean_your_hand_n_often">Clean Your Hand \n Often</string>
    <string name="avoid_close_contact">Avoid Close \n Contact</string>
    <string name="wear_a_face_mask">Wear a Face \n Mask</string>
    <string name="are_you_feeling_sick">Are you feeling sick ?</string>
    <string name="if_you_are_feeling_sick_with_any_of_the_covid_19_symptoms_please_cal_or_sms_us_immediately_for_help">If you are feeling sick with any of the covid-19 symptoms \n please call or SMS us immediately for help</string>

    <string name="covid_19">Covid-19</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_about">About</string>
    <string name="affected">Affected</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="serious">Serious</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="call_now">Call Now</string>
    <string name="send_sms">Send SMS</string>
    <string name="daily_new_cases">Daily New Cases</string>
    <string name="covid_19_app">Covid Status </string>
    <string name="version">Version</string>
    <string name="long_text">This is a test.This is a test.This is a test.This is a test.This is a test.This is a test.</string>
    <string name="_1_0">1.0</string>
    <string name="last_update">June 2020</string>
    <string name="lyec_developers">Lyec Developers</string>
    <string name="txt_email">jabajnan8@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="info">Info</string>
    <string name="please_wait">PLEASE WAIT…</string>


    <string name="home_global_data">Global Cases</string>
    <string name="home_confirmed">Confirmed</string>
    <string name="home_death">Death</string>
    <string name="home_recovered">Recovered</string>


    <string name="null_text" translatable="false">...</string>
    <string name="clean_hands">Clean Hands</string>


    <!--Trending fragment strings-->
    <string-array name="statistics_tabs_array">
        <item>My Country</item>
        <item>Global</item>

    </string-array>


    <!--    PREVENTIVE STRING ASSET-->
    <string name="social_distancing">
        With social distancing, we reduce contact with each other to prevent COVID-19 spread. Conversely, if you turn out
        infected but not aware of it, so keeping away from the crowd will really help prevent the spread.\n\n
        So, if someone infected with this virus then accidentally coughs or sneezes without closing his mouth,
        then the droplet will fall on a nearby surface. When there are other people who are not infected holding
        the surface, then touches the mouth, nose or eyes without washing hands first, he has high infected risk.
        \n\nThis is what makes the transmission of this disease rise dramatically in a short time.
        Many people are not aware that they are infected, then go to various locations to meet friends
        and relatives. As a result, the spread of this virus is increasingly widespread.
    </string>
    <string name="social_distancing_citation">
        From: https://lifestyle.kompas.com/read/2020/03/16/143303720/social-distancing-efektif-cegah-penyebaran-corona-bagaimana-caranya?page=all
    </string>

    <string name="wash_hand">
        World Health Organization (WHO) recommends that everyone always wash their hands
        in order to prevent the spread of the corona virus COVID-19. Clean your hands regularly and thoroughly with soap
        and water or alcohol-based liquids.\n\nWash your hands with soap and water or use cleaning fluid
        alcohol-based can kill viruses that may be in your hands. Washing hands can get you
        stay healthy and prevent the spread of respiratory infections and diarrhea from one person to another.\n\nGerms can
        spread from other people or surfaces when you: \ n1. Touch your eyes, nose and mouth with hands
        not washed.\n2. Eat or prepare food and drinks with your hands not washed.\n3. Touch the surface
        or contaminated object.\n4. Flinches, coughs, or sneezes on the hands and then touches the hands
        other people or objects.
    </string>
    <string name="wash_hand_citation">
        From: https://tirto.id/cara-cuci-tangan-dengan-7-langkah-menurut-who-untuk-cegah-corona-eLyQ
    </string>

    <string name="wear_mask">
        Research from the University of Hong Kong and the University of Maryland found that masks
        simple blocking 100 percent of droplets and aerosols. The Guardian writes, countries that are
        has required their citizen wearing a face mask from the beginning shows a lower mortality rate than
        countries that don\'t enforce it.\n\nHowever, the big challenge is using masks only
        will work if most people use it. Analysis from the Food and Drug Administration (FDA)
        about the flu estimates, if 50 percent of the population uses masks, transmission of the virus can be reduced
        by half. Meanwhile, if 80 percent of the population uses masks, the virus can be lost.\n\nBecause
        that, various regions are currently adopting laws that require the use of masks in crowded places
        such as public transportation and shops.
    </string>
    <string name="wear_mask_citation">
        From: https://www.kompas.com/tren/read/2020/04/08/073100465/pandemi-virus-corona-dan-alasan-kenapa-kini-kita-semua-harus-pakai-masker-?page=all#page4
    </string>
</resources>
