<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/full_dashboard_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="0dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20ssp"
                android:layout_alignParentStart="true"
                android:text="About"
                />

            <ImageView
                android:id="@+id/img_options"
                android:contentDescription="@string/todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_close_foreground" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pagetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_19_app"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold">

            </TextView>

            <View
                android:layout_width="@dimen/_90sdp"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/version_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_layout"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pageSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp">

            </TextView>

            <TextView
                android:id="@+id/version_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/_1_0"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_layout"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pageSubTitleHeading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Update"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp">

            </TextView>

            <TextView
                android:id="@+id/last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_update"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_layout"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pageSubTitleHeading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_text"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp">

            </TextView>

            <TextView
                android:id="@+id/pageSubTitleHeading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lyec_developers"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"

                />

            <TextView
                android:id="@+id/pageSubTitleHeading4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>